--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,24 @@
   --secondary-dark-color: #2e2f42;
 }
 
+h1,
+h2,
+h3,
+p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
 .list {
+  margin: 0;
+  padding: 0;
+
   list-style: none;
 }
 
@@ -25,7 +42,27 @@ body {
   letter-spacing: 0.02em;
 }
 
+.container {
+  width: 1158px;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+
 /* ================COMPONENTS */
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 .logo {
   color: var(--accent-color);
   font-family: Raleway, sans-serif;
@@ -62,6 +99,8 @@ body {
 }
 
 .content-title {
+  margin-bottom: 72px;
+
   color: var(--secondary-dark-color);
   font-size: 36px;
   line-height: 1.11;
@@ -70,7 +109,15 @@ body {
   text-align: center;
 }
 
+.content-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+}
+
 .item-title {
+  margin-bottom: 8px;
+
   color: var(--secondary-dark-color);
   font-weight: 500;
   font-size: 20px;
@@ -95,6 +142,11 @@ body {
   letter-spacing: 0.04em;
 }
 .button.primary {
+  min-width: 169px;
+  height: 56px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+
   color: var(--primary-white-color);
   background-color: var(--accent-color);
 }
@@ -105,6 +157,10 @@ body {
 }
 
 .button.secondary {
+  padding: 12px 24px;
+  border: 1px solid #e7e9fc;
+  border-radius: 4px;
+
   color: var(--accent-color);
   background-color: var(--secondary-cloud-color);
 }
@@ -114,11 +170,59 @@ body {
   color: var(--primary-white-color);
   background-color: var(--action-color);
 }
+
 /* ================/COMPONENTS */
 
 /* ================HEADER */
+
+.header-container {
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid #e7e9fc;
+}
+
+.menu {
+  display: flex;
+  align-items: center;
+}
+
+.menu-list {
+  display: flex;
+  align-items: center;
+  margin-left: 76px;
+}
+
+.menu-link {
+  display: block;
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+
+.menu-list .menu-item + .menu-item {
+  margin-left: 40px;
+}
+
 .contacts {
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+
   font-style: normal;
+}
+
+.contacts-list {
+  display: flex;
+  align-items: center;
+}
+
+.contact-link {
+  display: block;
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+
+.contacts-list .contacts-item:not(:last-child) {
+  margin-right: 40px;
 }
 
 .contact-link {
@@ -135,30 +239,118 @@ body {
 
 /* ================HERO */
 .hero {
+  padding-top: 188px;
+  padding-bottom: 188px;
+
   background-color: var(--secondary-dark-color);
+  text-align: center;
 }
 
 .hero-title {
+  max-width: 496px;
+  margin: 0 auto 48px auto;
+
   color: var(--primary-white-color);
   font-size: 56px;
   line-height: 1.07;
-  text-align: center;
   letter-spacing: 0.02em;
 }
 /* ================/HERO */
 
+/* ================FEATURES */
+
+.features-conteiner {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
+.features-item {
+  display: flex;
+  flex-basis: calc((100% - 3 * 24px) / 4);
+}
+/* ================/FEATURES */
+
+/* ================PRODUCT CONTENT */
+.product-content {
+  padding-bottom: 120px;
+}
+
+.picture-item {
+  flex-basis: calc((100% - 2 * 24px) / 3);
+}
+/* ================/PRODUCT CONTENT */
+
 /* ================TEAM CONTENT */
 .team-content {
+  padding-top: 120px;
+  padding-bottom: 120px;
+
   background-color: var(--secondary-cloud-color);
 }
-.team-content .content-item {
+
+.emloyees-card {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  border-radius: 0px 0px 4px 4px;
+  flex-basis: calc((100% - 3 * 24px) / 4);
+
+  text-align: center;
   background-color: var(--primary-white-color);
 }
 
+.employees-wrapper {
+  padding: 32px 6px;
+}
 /* ================/TEAM CONTENT */
 
 /* ================FOOTER */
 .footer {
+  padding-top: 100px;
+  padding-bottom: 100px;
+
   background-color: var(--secondary-dark-color);
 }
+
+.footer-content {
+  display: flex;
+  justify-content: last baseline;
+  flex-direction: column;
+}
+
+.footer-logo {
+  margin-bottom: 16px;
+  width: 264px;
+}
+
+.footer-description {
+  width: 264px;
+}
 /* ================/FOOTER */
+
+/* ================FILTER BUTTONS */
+.filter-button {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+  padding-top: 96px;
+}
+/* ================/FILTER BUTTONS */
+
+/* ================PROJECT-LIST */
+.project-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 24px 48px;
+  margin-top: 72px;
+  padding-bottom: 120px;
+}
+
+.project-wrapper {
+  padding: 32px 0 32px 16px;
+  border-right: 1px solid #e7e9fc;
+  border-bottom: 1px solid #e7e9fc;
+  border-left: 1px solid #e7e9fc;
+  flex-basis: calc((100% - 2 * 24px) / 3);
+}
+/* ================/PROJECT-LIST */
